--- a/datasette_query_assistant/templates/query_assistant.html
+++ b/datasette_query_assistant/templates/query_assistant.html
@@ -17,7 +17,9 @@
   <p><textarea style="width: 80%; height: 3em;" name="question" id="id_question"></textarea>
   <p>
     <input type="hidden" name="csrftoken" value="{{ csrftoken() }}">
-    <input type="hidden" name="table" value="{{ table }}">
+    {% if table %}
+      <input type="hidden" name="table" value="{{ table }}">
+    {% endif %}
     <input type="submit" value="Submit">
   </p>
 </form>
